@@ -46,7 +46,7 @@
     </extension>
 </addon>
 
-<addon id="plugin.video.irfree" version="0.1.0" name="IRFree" provider-name="anilkuj">
+<addon id="plugin.video.irfree" version="0.1.1" name="IRFree" provider-name="anilkuj">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
         <import addon="script.module.t0mm0.common" version="0.0.1"/>
